[gd_scene load_steps=3 format=3 uid="uid://dbwlp1oymptme"]

[ext_resource type="Script" path="res://scripts/menu/Settings.gd" id="1_t3ew8"]

[sub_resource type="Theme" id="Theme_nmb54"]

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3ew8")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.941176)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.129412, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Title" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Settings"
fit_content = true
scroll_active = false
autowrap_mode = 2
meta_underlined = false
hint_underlined = false
language = "en"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="BGMLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "BGM"
fit_content = true
autowrap_mode = 0

[node name="BGMSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
scrollable = false

[node name="SFXLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "SFX"
fit_content = true
autowrap_mode = 0

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
scrollable = false

[node name="MasterLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Master"
fit_content = true
autowrap_mode = 0

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
scrollable = false

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Revert" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revert"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset
"

[node name="btn_back" type="Button" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 84.0
offset_bottom = 62.0
theme = SubResource("Theme_nmb54")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Buttons/Revert" to="." method="_on_revert_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Buttons/Reset" to="." method="_on_reset_button_down"]
[connection signal="button_down" from="btn_back" to="." method="_on_btn_back_button_down"]
